--- a/APIGateway/build.gradle
+++ b/APIGateway/build.gradle
@@ -4,11 +4,11 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.4'
 }
 
-group = 'vn.edu.iuh'
+group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '21'
+	sourceCompatibility = '17'
 }
 
 repositories {
