--- a/OrderService/src/main/resources/application.yml
+++ b/OrderService/src/main/resources/application.yml
@@ -8,3 +8,11 @@ eureka:
         value: true
     instance:
         hostname: localhost
+
+
+spring:
+  config:
+    import: "optional:configserver:"
+  cloud:
+    config:
+      uri: http://localhost:9999
