fix api gatewya, applicationn.properties

--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=ApiGateway
+spring.main.allow-bean-definition-overriding=true
 
 server.port=8080
 
-#service.auth.uri=lb:/AuthService
+service.login.uri=lb://LogínService
 service.product.uri=lb://ProductService
 service.order.uri=lb://OrderService
 service.user.uri=lb://UserService
-service.sale.uri=lb://SaleService
+service.sales.uri=lb://SaleService
 service.supplier.uri=lb://SupplierService
 
 
