--- a/LoginService/src/main/resources/application.properties
+++ b/LoginService/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-spring.application.name=login-service
+spring.application.name=LoginService
 
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.datasource.username=root
-#spring.datasource.password=28092002
-#spring.datasource.url=jdbc:mariadb://localhost:3306/FADDB?createDatabaseIfNotExist=true
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=12345678
+spring.datasource.url=jdbc:mariadb://localhost:3306/FADDB?createDatabaseIfNotExist=true
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/FADDB?createDatabaseIfNotExist=true
-spring.datasource.username=postgres
-spring.datasource.password=123456789
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.url=jdbc:postgresql://localhost:5432/FADDB?createDatabaseIfNotExist=true
+#spring.datasource.username=postgres
+#spring.datasource.password=123456789
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
