--- a/SaleService/src/main/resources/application.properties
+++ b/SaleService/src/main/resources/application.properties
@@ -2,8 +2,14 @@ spring.application.name=SaleService
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=28092002
-spring.datasource.url=jdbc:mariadb://localhost:3306/projectCK_sales?createDatabaseIfNotExist=true
+spring.datasource.password=12345678
+spring.datasource.url=jdbc:mariadb://localhost:3306/FADDB?createDatabaseIfNotExist=true
+
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.url=jdbc:postgresql://localhost:5432/FADDB?createDatabaseIfNotExist=true
+#spring.datasource.username=postgres
+#spring.datasource.password=123456789
+
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
