update circuit breake

--- a/ProductService/build.gradle
+++ b/ProductService/build.gradle
@@ -25,6 +25,10 @@ ext {
 }
 
 dependencies {
+
+    implementation 'io.github.resilience4j:resilience4j-spring-boot2:1.7.1'
+    implementation 'io.github.resilience4j:resilience4j-circuitbreaker:1.7.1'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 //    implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'net.datafaker:datafaker:2.0.2'
