--- a/ProductService/src/main/resources/application.yml
+++ b/ProductService/src/main/resources/application.yml
@@ -8,3 +8,18 @@ eureka:
         value: true
     instance:
         hostname: localhost
+
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        registerHealthIndicator: true
+        slidingWindowSize: 10
+        failureRateThreshold: 50
+        waitDurationInOpenState: 10000
+        permittedNumberOfCallsInHalfOpenState: 3
+        minimumNumberOfCalls: 10
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+    instances:
+      productService:
+        baseConfig: default
