--- a/OrderService/src/main/resources/application.properties
+++ b/OrderService/src/main/resources/application.properties
@@ -5,9 +5,14 @@ spring.cache.redis.time-to-live=60000
 spring.cache.redis.cache-null-values=true
 
 
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=12345678
+#spring.datasource.url=jdbc:mariadb://localhost:3306/FADDB?createDatabaseIfNotExist=true
+
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=28092002
 spring.datasource.url=jdbc:mariadb://localhost:3306/FADDB?createDatabaseIfNotExist=true
 
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
