--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=UserService
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=28092002
-spring.datasource.url=jdbc:mariadb://localhost:3306/projectCK_users?createDatabaseIfNotExist=true
+spring.datasource.password=12345678
+spring.datasource.url=jdbc:mariadb://localhost:3306/FADDB?createDatabaseIfNotExist=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
